# image-tiler

./: .python-version  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: example.tif  example.tif_tiled.tif
src/: cli.py
src/commands/: __init__.py  batch.py  singular.py
src/service/: __init__.py  tiler.py
