[tool.poetry]
name = "image-tiler"
version = "0.1.0"
description = "An image tiler for generation of quadrants faciliating manual object counting."
authors = ["awakenedhaki <rodrigo.vallejosch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
