[metadata]
name = image-tiler-cli
version = 0.1.0
author = Rodrigo Vallejos
description = Add a tiles to an image.
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    imtiler = cli:cli